Fix: `ColonyTotalFundsPopover` better list center alignment

--- a/src/modules/dashboard/components/ColonyTotalFunds/ColonyTotalFundsPopover.css
+++ b/src/modules/dashboard/components/ColonyTotalFunds/ColonyTotalFundsPopover.css
@@ -41,6 +41,7 @@
 
 .tokenIconContainer {
   margin-right: 17px;
+  height: 27px;
 }
 
 .tokenInfoContainer {
